--- a/style.css
+++ b/style.css
@@ -15,3 +15,10 @@
     height: 100vh;
     position: relative;
   }
+
+  .img-wrapper{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    
+  }
