--- a/style.css
+++ b/style.css
@@ -22,3 +22,11 @@
     background-color: rgba(0, 0, 0, 0.8);
     
   }
+
+
+  .img-wrapper img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+  }
