--- a/style.css
+++ b/style.css
@@ -38,3 +38,12 @@
     left: 15%;
 
   }
+
+  .banner h1{
+    font-family: 'Baloo Da 2',serif;
+    font-size: 8rem;
+    font-weight: 300;
+    color: #fff;
+    width: 50%;
+    line-height: 8rem;
+  }
