--- a/style.css
+++ b/style.css
@@ -46,4 +46,6 @@
     color: #fff;
     width: 50%;
     line-height: 8rem;
+    letter-spacing: .2rem;
+    text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
   }
