--- a/style.css
+++ b/style.css
@@ -49,3 +49,8 @@
     letter-spacing: .2rem;
     text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
   }
+  .banner p{
+    font-family: Josefin Slab,serif;
+    font-size: 4rem;
+    color: #fff;
+  }
