--- a/style.css
+++ b/style.css
@@ -50,7 +50,9 @@
     text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
   }
   .banner p{
-    font-family: Josefin Slab,serif;
+    font-family: "Josefin Slab",serif;
     font-size: 4rem;
     color: #fff;
+    width: 70%;
+    letter-spacing: 1rem;
   }
