--- a/style.css
+++ b/style.css
@@ -55,4 +55,7 @@
     color: #fff;
     width: 70%;
     letter-spacing: 1rem;
+    margin: 3rem;
+    margin-bottom: 3rem;
+    text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
   }
