--- a/style.css
+++ b/style.css
@@ -59,3 +59,7 @@
     margin-bottom: 3rem;
     text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
   }
+  .banner button{
+    width: 25rem;
+    height: 7rem;
+  }
