--- a/style.css
+++ b/style.css
@@ -62,4 +62,8 @@
   .banner button{
     width: 25rem;
     height: 7rem;
+    background-color: #c29525;
+    border: none;
+    font-family: "Muli",Serif;
+    font-size: 2rem;
   }
