--- a/style.css
+++ b/style.css
@@ -68,6 +68,6 @@
     font-size: 2rem;
     text-transform: uppercase;
     color: #fff;
-    text-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4)
 
   }
