--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@
     font-size: 2rem;
     text-transform: uppercase;
     color: #fff;
-    box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4)
+    box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
+    cursor: pointer;
 
   }
