--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
    z-index: 200;
    display: flex;
    flex-direction: column;
+   justify-content: space-evenly;
   }
   .line{
    width: 100%;
