--- a/style.css
+++ b/style.css
@@ -51,6 +51,12 @@
     object-fit: cover;
     opacity: 0.5;
   }
+  @-o-keyframes scale{
+    0%{
+        transform: scale(1.3);
+    }
+  }
+  
 
 
   .banner{
