--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
     opacity: 0.5;
     animation: scale 25s; 
   }
-  @-o-keyframes scale{
+  @keyframes scale{
     0%{
         transform: scale(1.3);
     }
@@ -102,4 +102,7 @@
     box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
     cursor: pointer;
 
+  }
+  @keyframes moveBanner{
+    
   }
