--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@
     line-height: 8rem;
     letter-spacing: .2rem;
     text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
+    opacity: 0;
   }
   .banner p{
     font-family: "Josefin Slab",serif;
