--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@
     letter-spacing: .2rem;
     text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
     opacity: 0;
+    animation: moveBanner 1s .7s;
   }
   .banner p{
     font-family: "Josefin Slab",serif;
@@ -91,7 +92,7 @@
     margin-bottom: 3rem;
     text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
     opacity: 0;
-    animation: move Banner 1s;
+    animation: move Banner 1s 0.9s;
   }
   .banner button{
     width: 25rem;
@@ -104,6 +105,7 @@
     color: #fff;
     box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
     cursor: pointer;
+    opacity: 0;
 
   }
   @keyframes moveBanner{
