--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@
     width: 100%;
     height: 100vh;
     position: relative;
+    perspective: relative;
+    overflow: hidden;
   }
 
   .img-wrapper{
@@ -80,8 +82,7 @@
     letter-spacing: .2rem;
     text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
     opacity: 0;
-    animation: moveBanner 1s .5s;
-    forwards;
+    animation: moveBanner 1s .5s forwards;
   }
   .banner p{
     font-family: "Josefin Slab",serif;
