--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   .hamburger-menu{
    width: 3rem;
    height: 3rem;
-   background-color: red; 
+  
    position: fixed;
    top: 5rem;
    right: 5rem;
@@ -35,7 +35,7 @@
     width: 100%;
     height: 100vh;
     position: relative;
-    perspective: relative;
+    perspective: 100rem;
     overflow: hidden;
   }
 
@@ -43,6 +43,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
+    overflow: hidden;
     
   }
 
@@ -63,8 +64,6 @@
     }
   }
   
-
-
   .banner{
     position: absolute;
     top: 30%;
@@ -78,31 +77,31 @@
     font-weight: 300;
     color: #fff;
     width: 50%;
-    line-height: 8rem;
+    line-height: 9rem;
     letter-spacing: .2rem;
-    text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
+    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
     opacity: 0;
     animation: moveBanner 1s .5s forwards;
   }
-  .banner p{
-    font-family: "Josefin Slab",serif;
+  .banner p {
+    font-family: "Joselin Slab",serif;
     font-size: 4rem;
     color: #fff;
     width: 70%;
-    letter-spacing: 1rem;
+    letter-spacing: 0.1rem;
     margin: 3rem;
     margin-bottom: 3rem;
-    text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
+    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
     opacity: 0;
-    animation: move Banner 1s .7s forwards;
+    animation: moveBanner 1s .7s forwards;
 
   }
   .banner button{
     width: 25rem;
     height: 7rem;
-    background-color: #c29525;
+    background-color: #C29525;
     border: none;
-    font-family: "Muli",Serif;
+    font-family: "Mulish",Serif;
     font-size: 2rem;
     text-transform: uppercase;
     color: #fff;
