--- a/style.css
+++ b/style.css
@@ -142,5 +142,6 @@
    text-align: center; 
   }
   .menu-link{
-    font-family: Baloo Da 2;
+    font-family: Baloo Da 2 serif;
+    font-size: 4rem;
   }
