--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
-
+    border-radius: 50%;
+    transition: background-color 0.3s;
+  
   }
