--- a/style.css
+++ b/style.css
@@ -149,6 +149,8 @@
   }
   .menu-link::before{
     content: attr(data-content);
+    position: absolute;
+    top: 0;
   }
   .social-media{
    position: absolute; 
