--- a/style.css
+++ b/style.css
@@ -1,184 +1,222 @@
-*{
-    margin: 0;
-    padding: 0;
-    outline: none;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
+* {
+  margin: 0;
+  padding: 0;
+  outline: none;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+html {
+  font-size: 62.5%;
+}
+.hamburger-menu {
+  width: 3rem;
+  height: 3rem;
+  position: fixed;
+  top: 5rem;
+  right: 5rem;
+  z-index: 200;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  cursor: pointer;
+  transition: right 0.7s;
+}
+.change .hamburger-menu {
+  right: 33rem;
+}
+.line {
+  width: 100%;
+  height: .2rem;
+  background-color: #fff;
+  box-shadow: 0 .1rem .2rem rgba(0, 0, 0, 0.2);
+}
+.change .line {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.change .line-1 {
+  transform: rotate(45deg) translate(0.3rem, 0.8rem);
+}
+.change .line-2 {
+  opacity: 0;
+  visibility: hidden;
+}
+.change .line-3 {
+  transform: rotate(-45deg) translate(0.3rem, -0.8rem);
+}
+.hamburger-menu span {
+  position: absolute;
+  left: 5rem;
+  width: 10rem;
+  height: 4rem;
+  background-color: #E2B646;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-family: 'Baloo Da 2', serif;
+  font-size: 1.6rem;
+  letter-spacing: 0.1rem;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s;
+}
+.change .hamburger-menu:hover span {
+  opacity: 1;
+  visibility: visible;
+}
+.hamburger-menu span::before {
+  content: "";
+  position: absolute;
+  border-left: 1rem solid transparent;
+  border-right: 1rem solid #E2B646;
+  border-bottom: 1rem solid transparent;
+  border-top: 1rem solid transparent;
+  top: 50%;
+  left: -2rem;
+  transform: translateY(-50%);
+}
+.header {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  perspective: 100rem;
+  overflow: hidden;
+}
+.img-wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  overflow: hidden;
+}
+.img-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.5;
+  animation: scale 25s;
+}
+@keyframes scale {
+  0% {
+    transform: scale(1.3);
   }
-  html {
-    font-size: 62.5%;
+  100% {
+    transform: scale(1);
   }
-
-  .hamburger-menu{
-   width: 3rem;
-   height: 3rem;
-  
-   position: fixed;
-   top: 5rem;
-   right: 5rem;
-   z-index: 200;
-   display: flex;
-   flex-direction: column;
-   justify-content: space-evenly;
-   cursor: pointer;
+}
+.banner {
+  position: absolute;
+  top: 30%;
+  left: 15%;
+}
+.banner h1 {
+  font-family: 'Baloo Da 2', serif;
+  font-size: 8rem;
+  font-weight: 300;
+  color: #fff;
+  width: 50%;
+  line-height: 8rem;
+  letter-spacing: .2rem;
+  text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
+  animation: moveBanner 1s .5s forwards;
+}
+.banner p {
+  font-family: "josefin slab", serif;
+  font-size: 4rem;
+  color: #fff;
+  width: 70%;
+  letter-spacing: 1rem;
+  margin-bottom: 3rem;
+  text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  animation: moveBanner 1s .7s forwards;
+}
+.banner button {
+  width: 25rem;
+  height: 7rem;
+  background-color: #C29525;
+  border: none;
+  font-family: 'Muli', serif;
+  font-size: 2rem;
+  text-transform: uppercase;
+  color: #fff;
+  text-shadow: 0 0.2rem .4rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.3rem .5rem rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  opacity: 0;
+  animation: moveBanner 1s .9s forwards;
+}
+@keyframes moveBanner {
+  0% {
+    transform: translateY(40rem)rotateY(-20deg);
   }
-  .line{
-   width: 100%;
-   height: 0.2rem;
-   background-color: #fff;
-   box-shadow: 0.1rem .2rem rgba(0, 0, 0, 0.2);
-
+  100% {
+    transform: translateY(0)rotateY(0);
+    opacity: 1;
   }
-
-  .header{
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    perspective: 100rem;
-    overflow: hidden;
-  }
-
-  .img-wrapper{
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    overflow: hidden;
-    
-  }
-
-
-  .img-wrapper img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.5;
-    animation: scale 25s; 
-  }
-  @keyframes scale{
-    0%{
-        transform: scale(1.3);
-    }
-    100%{transform: scale(1);
-
-    }
-  }
-  
-  .banner{
-    position: absolute;
-    top: 30%;
-    left: 15%;
-
-  }
-
-  .banner h1{
-    font-family: 'Baloo Da 2',serif;
-    font-size: 8rem;
-    font-weight: 300;
-    color: #fff;
-    width: 50%;
-    line-height: 9rem;
-    letter-spacing: .2rem;
-    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
-    opacity: 0;
-    animation: moveBanner 1s .5s forwards;
-  }
-  .banner p {
-    font-family: "Joselin Slab",serif;
-    font-size: 4rem;
-    color: #fff;
-    width: 70%;
-    letter-spacing: 0.1rem;
-    margin: 3rem;
-    margin-bottom: 3rem;
-    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
-    opacity: 0;
-    animation: moveBanner 1s .7s forwards;
-
-  }
-  .banner button{
-    width: 25rem;
-    height: 7rem;
-    background-color: #C29525;
-    border: none;
-    font-family: "Mulish",Serif;
-    font-size: 2rem;
-    text-transform: uppercase;
-    color: #fff;
-    box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
-    cursor: pointer;
-    opacity: 0;
-    animation: moveBanner 1s .9s forwards;
-
-  }
-  @keyframes moveBanner{
-    0%{
-        transform: translateV( 40rem) rotateV(-20deg);
-    }
-    100%{transform: translateY(0) rotateY(0);
-        opacity: 1;
-
-
-    }
-
-  }
-  .sidebar{
+}
+.sidebar {
   width: 40rem;
   height: 100vh;
   position: fixed;
   top: 0;
-  right: 0;
+  right: -40rem;
   background-color: #fff;
   transition: right 0.5s;
   z-index: 100;
-
-  }
-  .menu{
-   position: absolute;
-   top: 40%;
-   left: 50%;
-   transform: translate(-50%,-50%); 
-
-  }
-  .menu-item{
-   text-align: center; 
-  }
-  .menu-link{
-    font-family: Baloo Da 2 serif;
-    font-size: 4rem;
-    color: #555;
-    position: relative;
-  }
-  .menu-link::before{
-    content: attr(data-content);
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: #C29525;
-    width: 0;
-    
-  }
-  .social-media{
-   position: absolute; 
-   bottom: 3rem;
-   width: 100%;
-   display: flex;
-   justify-content: center;
-  }
-  .social-media i{
-    font: 2.2rem;
-    margin: 3rem;
-    width: 4.5rem;
-    height: 4.5rem;
-    background-color: #777;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    transition: background-color 0.3s;
-  
-  }
-  .social-media i:hover{
-    background-color: #C29525;
-  }
+}
+.change .sidebar {
+  right: 0;
+}
+.menu {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.menu-item {
+  text-align: center;
+}
+.menu-link {
+  font-family: 'Baloo Da 2', serif;
+  font-size: 4rem;
+  color: #555;
+  position: relative;
+}
+.menu-link::before {
+  content: attr(data-content);
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #C29525;
+  width: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  transition: width .3s ease-in-out;
+}
+.menu-link:hover::before {
+  width: 100%;
+}
+.social-media {
+  position: absolute;
+  bottom: 3rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.social-media i {
+  font-size: 2.2rem;
+  margin: 3rem;
+  width: 4.5rem;
+  height: 4.5rem;
+  background-color: #777;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transition: background-color 0.3s;
+}
+.social-media i:hover {
+  background-color: #C29525;
+}
