--- a/style.css
+++ b/style.css
@@ -165,38 +165,45 @@ html {
   transition: right 0.5s;
   z-index: 100;
 }
+
 .change .sidebar {
   right: 0;
 }
+
 .menu {
   position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 .menu-item {
   text-align: center;
 }
+
 .menu-link {
   font-family: 'Baloo Da 2', serif;
   font-size: 4rem;
   color: #555;
   position: relative;
 }
+
 .menu-link::before {
   content: attr(data-content);
   position: absolute;
   top: 0;
   left: 0;
-  color: #C29525;
+  color: #c29525;
   width: 0;
   overflow: hidden;
   white-space: nowrap;
   transition: width .3s ease-in-out;
 }
+
 .menu-link:hover::before {
   width: 100%;
 }
+
 .social-media {
   position: absolute;
   bottom: 3rem;
@@ -204,6 +211,7 @@ html {
   display: flex;
   justify-content: center;
 }
+
 .social-media i {
   font-size: 2.2rem;
   margin: 3rem;
@@ -216,7 +224,11 @@ html {
   align-items: center;
   border-radius: 50%;
   transition: background-color 0.3s;
+
+
+
 }
+
 .social-media i:hover {
-  background-color: #C29525;
+  background-color: #c29525;
 }
