--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ html {
   left: 5rem;
   width: 10rem;
   height: 4rem;
-  background-color: #E2B646;
+  background-color: #e2B646;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -69,7 +69,7 @@ html {
   content: "";
   position: absolute;
   border-left: 1rem solid transparent;
-  border-right: 1rem solid #E2B646;
+  border-right: 1rem solid #e2B646;
   border-bottom: 1rem solid transparent;
   border-top: 1rem solid transparent;
   top: 50%;
