--- a/style.css
+++ b/style.css
@@ -245,5 +245,6 @@ html {
   padding: 7rem 0 10rem 0;
 }
 .section-heading{
-  font-family: Muli,serig;
+  font-family: Muli,serif;
+  font-size: 5rem;
 }
