--- a/style.css
+++ b/style.css
@@ -352,10 +352,12 @@ html {
   align-items: center;
   padding: 0 5rem 20rem 5rem;
 }
-.Cards-Wrapper{
+
+.cards-wrapper {
   display: flex;
   justify-content: space-evenly;
   margin-top: 8rem;
+  width: 100%;
 }
 .Card{
   width: 37rem;
