--- a/style.css
+++ b/style.css
@@ -367,7 +367,12 @@ html {
   border-radius: 0.5rem;
   position: relative;
 }
-
+card-img-wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: #262626;
+  border-radius: 0.5rem;
+}
 
 
 
