--- a/style.css
+++ b/style.css
@@ -373,6 +373,14 @@ card-img-wrapper {
   background-color: #262626;
   border-radius: 0.5rem;
 }
+.card-img-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: .8;
+  border-radius: 0.5rem;
+  transition: opacity 0.3s;
+}
 
 
 
