--- a/style.css
+++ b/style.css
@@ -359,3 +359,10 @@ html {
   margin-top: 8rem;
   width: 100%;
 }
+.card {
+  width: 37rem;
+  height: 45rem;
+  box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.4);
+  border-radius: 0.5rem;
+  position: relative;
+}
