--- a/style.css
+++ b/style.css
@@ -370,4 +370,13 @@ html {
 .card-img-wrapper{
   width: 100%;
   height: 100%;
+  background-color: #262626;
+  border-radius: 0.5rem;
+}
+
+.card-img-wrapper img{
+  width: 100%;
+  height: 100%;
+
+
 }
