--- a/style.css
+++ b/style.css
@@ -381,7 +381,13 @@ html {
   opacity: .8;
   border-radius: 0.5rem;
   transition: opacity 0.3s;
+}
 
+.card:hover .card-img-wrapper img{
+  opacity: .5;
+}
 
+.card-info{
+  position: absolute;
 
 }
