--- a/style.css
+++ b/style.css
@@ -392,5 +392,7 @@ html {
   bottom: 0;
   padding: 2rem;
   text-shadow: 0.2rem .5rem rgba(0, 0, 0, 0.4);
-
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
 }
