--- a/style.css
+++ b/style.css
@@ -432,4 +432,6 @@ html {
   height: 3rem;
   background-color: #C29525;
   border: none;
+  font-family: 'Baloo Da 2', serif;
+  font-size: 1.4rem;
 }
