--- a/style.css
+++ b/style.css
@@ -445,5 +445,7 @@ html {
   height: 100vh;
   background-color: #272727;
   display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
