--- a/style.css
+++ b/style.css
@@ -457,5 +457,6 @@ html {
 }
 .contact-left{
   width: 35%;
-
+  background: linear-gradient(rgba(15, 15, 15, 0.6), rgba(22, 22, 22, 0.9)),
+  url(/Asset/Images/contact-bg.jpg) center no-repeat; 
 }
