--- a/style.css
+++ b/style.css
@@ -440,25 +440,102 @@ html {
   box-shadow: 0 0.1rem .8rem rgba(0, 0, 0, 0.4);
 
 }
-.contact{
+.contact {
   width: 100%;
   height: 100vh;
   background-color: #272727;
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
-.contact-wrapper{
+.contact-wrapper {
   width: 60%;
   height: 75rem;
   display: flex;
   box-shadow: 0 3rem 7rem rgba(0, 0, 0, 0.5);
 }
-.contact-left{
+.contact-left {
   width: 35%;
   background: linear-gradient(rgba(15, 15, 15, 0.6), rgba(22, 22, 22, 0.9)),
-  url(/Asset/Images/contact-bg.jpg) center no-repeat;
+    url(/Asset/Images/contact-bg.jpg) center no-repeat;
   background-size: cover;
-
+}
+.contact-right{
+  width: 65%;
+  background-color: #eee;
+  padding: 3rem 10rem 10rem 10rem;
+}
+.contact-heading {
+  font-family: "Baloo Da 2", serif;
+  font-size: 6rem;
+  font-weight: 300;
+  color: #272727;
+  margin-bottom: 5rem;
+  text-align: center;
+}
+.contact-right form{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.input-group {
+  position: relative;
+}
+.field{
+  width: 45rem;
+  background-color: transparent;
+  border: none;
+  border-bottom: 0.2rem dashed #636363;
+  margin: 3rem 0;
+  padding: 1rem 1rem 1rem 0;
+  font-family: "Mulish", serif;
+  font-size: 1.6rem;
+  color: #4B4B4B;
+}
+.input-group input {
+  height: 4rem;
+}
+.input-group textarea {
+  max-height: 7rem;
+  max-width: 45rem;
+}
+.field:focus {
+  border-bottom-style: solid;
+}
+.input-group label {
+  position: absolute;
+  left: 0;
+  font-family: "Baloo Da 2", serif;
+  font-size: 1.8rem;
+  color: #4B4B4B;
+  text-transform: uppercase;
+  pointer-events: none;
+  transition: all 0.3s;
+}
+.input-label {
+  bottom: 3rem;
+}
+.message {
+  bottom: 6rem;
+}
+.field:focus ~ label {
+  transform: translateY(-3rem);
+  font-size: 1.2rem;
+}
+.submit-btn {
+  width: 45rem;
+  height: 5rem;
+  background-color: #C29525;
+  color: #fff;
+  border: none;
+  margin-top: 2rem;
+  font-family: "Mulish", serif;
+  font-size: 2rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  cursor: pointer;
+  text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3);
 }
