--- a/style.css
+++ b/style.css
@@ -462,5 +462,6 @@ html {
 }
 .contact-right{
     width: 65%;
-   background-color: #eee;
+    background-color: #eee;
+    padding: 3rem 10rem 10rem 10rem;
 }
