--- a/style.css
+++ b/style.css
@@ -465,3 +465,6 @@ html {
     background-color: #eee;
     padding: 3rem 10rem 10rem 10rem;
 }
+.contact-heading{
+   font-family: "Baloo Da 2", serif;
+}
