--- a/style.css
+++ b/style.css
@@ -468,4 +468,6 @@ html {
 .contact-heading{
    font-family: "Baloo Da 2", serif;
     font-size: 6rem;
+    color: #272727;
+    margin-bottom: 5rem;
 }
