--- a/style.css
+++ b/style.css
@@ -468,6 +468,7 @@ html {
 .contact-heading{
    font-family: "Baloo Da 2", serif;
     font-size: 6rem;
+     font-weight: 300;
     color: #272727;
     margin-bottom: 5rem;
      text-align: center;
