--- a/style.css
+++ b/style.css
@@ -488,4 +488,6 @@ align-items: center;
     border: none;
      border-bottom: 0.2rem dashed #636363;
      margin: 3rem 0;
+      padding: 1rem 1rem 1rem 0;
+       font-family: "Mulish", serif;
 }
