--- a/style.css
+++ b/style.css
@@ -490,4 +490,7 @@ align-items: center;
      margin: 3rem 0;
       padding: 1rem 1rem 1rem 0;
        font-family: "Mulish", serif;
+        font-size: 1.6rem;
+        color: #4B4B4B;
+
 }
