--- a/style.css
+++ b/style.css
@@ -500,7 +500,17 @@ align-items: center;
   max-height: 7rem;
   max-width: 45rem;
 }
-.fielf:focus{
+.field:focus{
   border-bottom-style: solid;
 
+}
+.input-group label {
+  position: absolute;
+  left: 0;
+  font-family: "Baloo Da 2", serif;
+  font-size: 1.8rem;
+  color: #4B4B4B;
+  text-transform: uppercase;
+  pointer-events: none;
+  transition: all 0.3s;
 }
