--- a/style.css
+++ b/style.css
@@ -533,5 +533,7 @@ align-items: center;
   border: none;
   margin-top: 2rem;
   font-family: "Mulish", serif;
+  font-size: 2rem;
+  font-weight: 300;
 
 }
