--- a/style.css
+++ b/style.css
@@ -535,5 +535,6 @@ align-items: center;
   font-family: "Mulish", serif;
   font-size: 2rem;
   font-weight: 300;
+  text-transform: uppercase;
 
 }
