--- a/style.css
+++ b/style.css
@@ -544,3 +544,9 @@ align-items: center;
 
 
 }
+.footer-content {
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 50%;
+}
