--- a/style.css
+++ b/style.css
@@ -550,3 +550,13 @@ align-items: center;
   text-align: center;
   width: 50%;
 }
+.copyright {
+  order: 1;
+  margin-top: 3rem;
+}
+}
+@media (max-width: 700px) {
+.banner h1 {
+  font-size: 4rem;
+  line-height: 5rem;
+}
