--- a/style.css
+++ b/style.css
@@ -27,9 +27,9 @@ html {
 }
 .line {
   width: 100%;
-  height: .2rem;
+  height: 0.2rem;
   background-color: #fff;
-  box-shadow: 0 .1rem .2rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.1rem 0.2rem rgba(0, 0, 0, 0.2);
 }
 .change .line {
   background-color: rgba(0, 0, 0, 0.8);
@@ -49,12 +49,12 @@ html {
   left: 5rem;
   width: 10rem;
   height: 4rem;
-  background-color: #e2B646;
+  background-color: #e2b646;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #fff;
-  font-family: 'Baloo Da 2', serif;
+  font-family: "Baloo Da 2", serif;
   font-size: 1.6rem;
   letter-spacing: 0.1rem;
   opacity: 0;
@@ -69,7 +69,7 @@ html {
   content: "";
   position: absolute;
   border-left: 1rem solid transparent;
-  border-right: 1rem solid #e2B646;
+  border-right: 1rem solid #e2b646;
   border-bottom: 1rem solid transparent;
   border-top: 1rem solid transparent;
   top: 50%;
@@ -110,15 +110,15 @@ html {
   left: 15%;
 }
 .banner h1 {
-  font-family: 'Baloo Da 2', serif;
+  font-family: "Baloo Da 2", serif;
   font-size: 8rem;
   font-weight: 300;
   color: #fff;
   width: 50%;
   line-height: 8rem;
-  letter-spacing: .2rem;
-  text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
-  animation: moveBanner 1s .5s forwards;
+  letter-spacing: 0.2rem;
+  text-shadow: 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
+  animation: moveBanner 1s 0.5s forwards;
 }
 .banner p {
   font-family: "josefin slab", serif;
@@ -127,31 +127,31 @@ html {
   width: 70%;
   letter-spacing: 1rem;
   margin-bottom: 3rem;
-  text-shadow: 0.3rem .5rem rgba(0, 0, 0, 0.4);
+  text-shadow: 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
   opacity: 0;
-  animation: moveBanner 1s .7s forwards;
+  animation: moveBanner 1s 0.7s forwards;
 }
 .banner button {
   width: 25rem;
   height: 7rem;
-  background-color: #C29525;
+  background-color: #c29525;
   border: none;
-  font-family: 'Muli', serif;
+  font-family: "Muli", serif;
   font-size: 2rem;
   text-transform: uppercase;
   color: #fff;
-  text-shadow: 0 0.2rem .4rem rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0.3rem .5rem rgba(0, 0, 0, 0.4);
+  text-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
   cursor: pointer;
   opacity: 0;
-  animation: moveBanner 1s .9s forwards;
+  animation: moveBanner 1s 0.9s forwards;
 }
 @keyframes moveBanner {
   0% {
-    transform: translateY(40rem)rotateY(-20deg);
+    transform: translateY(40rem) rotateY(-20deg);
   }
   100% {
-    transform: translateY(0)rotateY(0);
+    transform: translateY(0) rotateY(0);
     opacity: 1;
   }
 }
@@ -182,7 +182,7 @@ html {
 }
 
 .menu-link {
-  font-family: 'Baloo Da 2', serif;
+  font-family: "Baloo Da 2", serif;
   font-size: 4rem;
   color: #555;
   position: relative;
@@ -197,7 +197,7 @@ html {
   width: 0;
   overflow: hidden;
   white-space: nowrap;
-  transition: width .3s ease-in-out;
+  transition: width 0.3s ease-in-out;
 }
 
 .menu-link:hover::before {
@@ -224,22 +224,16 @@ html {
   align-items: center;
   border-radius: 50%;
   transition: background-color 0.3s;
-
-
-
 }
 
 .social-media i:hover {
   background-color: #c29525;
 }
- 
-
 
 .about-us {
   width: 100%;
   background-color: #f5f5f5;
   padding-bottom: 15rem;
-
 }
 
 .section-header {
@@ -250,13 +244,12 @@ html {
 }
 
 .section-heading {
-  font-family: 'Muli', serif;
+  font-family: "Muli", serif;
   font-size: 5rem;
   font-weight: 300;
   color: #4b4b4b;
   margin-bottom: 6rem;
 }
-
 
 .underline {
   width: 12rem;
@@ -321,7 +314,7 @@ html {
 }
 
 .service-header h3 {
-  font-family: 'Baloo Da 2', serif;
+  font-family: "Baloo Da 2", serif;
   font-size: 2.6rem;
   line-height: 2.6rem;
   font-weight: 400;
@@ -367,31 +360,31 @@ html {
   position: relative;
 }
 
-.card-img-wrapper{
+.card-img-wrapper {
   width: 100%;
   height: 100%;
   background-color: #262626;
   border-radius: 0.5rem;
 }
 
-.card-img-wrapper img{
+.card-img-wrapper img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: .8;
+  opacity: 0.8;
   border-radius: 0.5rem;
   transition: opacity 0.3s;
 }
 
-.card:hover .card-img-wrapper img{
-  opacity: .5;
+.card:hover .card-img-wrapper img {
+  opacity: 0.5;
 }
 
-.card-info{
+.card-info {
   position: absolute;
   bottom: 0;
   padding: 2rem;
-  text-shadow: 0.2rem .5rem rgba(0, 0, 0, 0.4);
+  text-shadow: 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s;
@@ -403,23 +396,22 @@ html {
   visibility: visible;
 }
 
-.card-info h2{
-  font-family: 'Baloo Da 2', serif;
+.card-info h2 {
+  font-family: "Baloo Da 2", serif;
   font-size: 2.5rem;
   font-weight: 300;
   color: #eee;
 }
-.card-info h3{
-  font-family: 'Muli', serif;
+.card-info h3 {
+  font-family: "Muli", serif;
   font-size: 2rem;
   font-weight: 500;
-  color: #A52A2A;
+  color: #a52a2a;
   font-weight: 500;
   margin-bottom: 1rem;
-
 }
-.card-info p{
-  font-family: 'Baloo Da 2', serif;
+.card-info p {
+  font-family: "Baloo Da 2", serif;
   font-size: 1.4rem;
   line-height: 1.6rem;
   font-weight: 300;
@@ -427,18 +419,17 @@ html {
   width: 80%;
   margin-bottom: 2rem;
 }
-.card-info button{
+.card-info button {
   width: 10rem;
   height: 3rem;
-  background-color: #C29525;
+  background-color: #c29525;
   border: none;
-  font-family: 'Baloo Da 2', serif;
+  font-family: "Baloo Da 2", serif;
   font-size: 1.4rem;
   line-height: 1.5rem;
   color: #eee;
-  border-radius: .3rem;
-  box-shadow: 0 0.1rem .8rem rgba(0, 0, 0, 0.4);
-
+  border-radius: 0.3rem;
+  box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4);
 }
 .contact {
   width: 100%;
@@ -448,87 +439,100 @@ html {
   justify-content: center;
   align-items: center;
 }
+
 .contact-wrapper {
   width: 60%;
   height: 75rem;
   display: flex;
   box-shadow: 0 3rem 7rem rgba(0, 0, 0, 0.5);
 }
+
 .contact-left {
   width: 35%;
   background: linear-gradient(rgba(15, 15, 15, 0.6), rgba(22, 22, 22, 0.9)),
     url(/Asset/Images/contact-bg.jpg) center no-repeat;
   background-size: cover;
 }
-.contact-right{
-    width: 65%;
-    background-color: #eee;
-    padding: 3rem 10rem 10rem 10rem;
+
+.contact-right {
+  width: 65%;
+  background-color: #eee;
+  padding: 3rem 10rem 10rem 10rem;
 }
-.contact-heading{
-   font-family: "Baloo Da 2", serif;
-    font-size: 6rem;
-     font-weight: 300;
-    color: #272727;
-    margin-bottom: 5rem;
-     text-align: center;
+
+.contact-heading {
+  font-family: "Baloo Da 2", serif;
+  font-size: 6rem;
+  font-weight: 300;
+  color: #272727;
+  margin-bottom: 5rem;
+  text-align: center;
 }
-.contact-right form{
- width: 100%; 
- display: flex;
-flex-direction: column;
-align-items: center;
+
+.contact-right form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.input-group{
+
+.input-group {
   position: relative;
 }
-.field{
-   width: 45rem;
-   background-color: transparent;
-    border: none;
-     border-bottom: 0.2rem dashed #636363;
-     margin: 3rem 0;
-      padding: 1rem 1rem 1rem 0;
-       font-family: "Mulish", serif;
-        font-size: 1.6rem;
-        color: #4B4B4B;
+
+.field {
+  width: 45rem;
+  background-color: transparent;
+  border: none;
+  border-bottom: 0.2rem dashed #636363;
+  margin: 3rem 0;
+  padding: 1rem 1rem 1rem 0;
+  font-family: "Mulish", serif;
+  font-size: 1.6rem;
+  color: #4b4b4b;
 }
-.input-group input{
+
+.input-group input {
   height: 4rem;
 }
-.input-group textarea{
+
+.input-group textarea {
   max-height: 7rem;
   max-width: 45rem;
 }
-.field:focus{
-  border-bottom-style: solid;
 
+.field:focus {
+  border-bottom-style: solid;
 }
+
 .input-group label {
   position: absolute;
   left: 0;
   font-family: "Baloo Da 2", serif;
   font-size: 1.8rem;
-  color: #4B4B4B;
+  color: #4b4b4b;
   text-transform: uppercase;
   pointer-events: none;
   transition: all 0.3s;
 }
+
 .input-label {
   bottom: 3rem;
 }
+
 .message {
   bottom: 6rem;
 }
-.field:focus ~ label{
+
+.field:focus ~ label {
   transform: translateY(-3rem);
   font-size: 1.2rem;
 }
 
 .submit-btn {
-  height: 5rem;
   width: 45rem;
-  background-color: #C29525;
+  height: 5rem;
+  background-color: #c29525;
   color: #fff;
   border: none;
   margin-top: 2rem;
@@ -540,54 +544,256 @@ align-items: center;
   cursor: pointer;
   text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
   box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3);
-
-
-
 }
-.footer-content {
-  flex-direction: column;
+.footer {
+  width: 100%;
+  height: 15rem;
+  background-color: #17181b;
+  display: flex;
+  justify-content: center;
   align-items: center;
-  text-align: center;
-  width: 50%;
 }
+
+.footer-content {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+}
+
 .copyright {
-  order: 1;
-  margin-top: 3rem;
+  font-family: "Baloo Da 2", serif;
+  font-size: 1.6rem;
+  color: #a7a7a7;
+}
+
+.social-list a {
+  margin: 0 2rem;
+}
+
+.social-list i {
+  font-size: 2rem;
+  color: #a7a7a7;
+}
+
+.scroll-btn {
+  position: fixed;
+  right: 5rem;
+  bottom: 5rem;
+  width: 4.5rem;
+  height: 4.5rem;
+  background-color: #e2b646;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  color: #fff;
+  box-shadow: 0 0.1rem 0.6rem rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+}
+
+@media (max-width: 1500px) {
+  .about-us-img-wrapper {
+    grid-row: 3/-1;
+  }
+
+  .card {
+    width: 34rem;
+  }
+
+  .contact-wrapper {
+    width: 80%;
+    height: 65rem;
+  }
+
+  .footer-content {
+    width: 80%;
+  }
+}
+
+@media (max-width: 1400px) {
+  .banner h1 {
+    font-size: 6rem;
+    line-height: 7rem;
+  }
+
+  .banner p {
+    font-size: 3rem;
+  }
+
+  .banner button {
+    width: 20rem;
+    height: 5rem;
+    font-size: 1.6rem;
+  }
+
+  .menu-link {
+    font-size: 3rem;
+  }
+
+  .service:nth-child(1) {
+    grid-column: 3/7;
+  }
+
+  .service:nth-child(2) {
+    grid-column: 2/6;
+  }
+
+  .service:nth-child(3) {
+    grid-column: 3/7;
+  }
+
+  .service:nth-child(4) {
+    grid-column: 11/15;
+  }
+
+  .service:nth-child(5) {
+    grid-column: 12/16;
+  }
+
+  .service:nth-child(6) {
+    grid-column: 11/15;
+  }
+}
+
+@media (max-width: 1300px) {
+  .team {
+    padding-bottom: 5rem;
+  }
+
+  .cards-wrapper {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 4rem;
+  }
+
+  .card {
+    margin-bottom: 8rem;
+  }
+
+  .contact-wrapper {
+    width: 90%;
+    height: 55rem;
+  }
+
+  .contact-heading {
+    margin-bottom: 2rem;
+  }
+
+  .field {
+    margin: 2rem 0;
+  }
+}
+
+@media (max-width: 1000px) {
+  .banner h1 {
+    font-size: 5rem;
+    line-height: 6rem;
+  }
+
+  .banner p {
+    font-size: 2.5rem;
+  }
+
+  .banner button {
+    width: 18rem;
+    height: 4rem;
+    font-size: 1.5rem;
+  }
+
+  .services {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .service {
+    width: 40rem;
+    margin-bottom: 6rem;
+  }
+
+  .about-us-img-wrapper {
+    width: 40rem;
+  }
+
+  .about-us-img-wrapper img {
+    width: 100%;
+  }
+
+  .contact-left {
+    width: 0;
+  }
+
+  .contact-right {
+    width: 100%;
+  }
+
+  .field {
+    width: 55rem;
+  }
+
+  .input-group textarea {
+    max-width: 55rem;
+  }
+
+  .submit-btn {
+    width: 55rem;
+  }
+
+  .footer-content {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 50%;
+  }
+
+  .copyright {
+    order: 1;
+    margin-top: 3rem;
+  }
 }
 
 @media (max-width: 700px) {
-.banner h1 {
-  font-size: 4rem;
-  line-height: 5rem;
+  .banner h1 {
+    font-size: 4rem;
+    line-height: 5rem;
+  }
+
+  .banner p {
+    font-size: 2rem;
+  }
+
+  .field {
+    width: 35rem;
+  }
+
+  .input-group textarea {
+    max-width: 35rem;
+  }
+
+  .submit-btn {
+    width: 35rem;
+  }
 }
-.banner p {
-  font-size: 2rem;
-}
-.field {
-  width: 35rem;
-}
-.input-group textarea {
-  max-width: 35rem;
-}
-.submit-btn {
-  width: 35rem;
-}
-}
+
 @media (max-width: 500px) {
-html {
-  font-size: 45%;
-}
-.sidebar {
-  width: 100%;
-  right: -100%;
-}
-.change .hamburger-menu {
-  right: 38rem;
-}
-.service {
-  width: 30rem;
-}
-.footer {
-  height: 18rem;
-}
+  html {
+    font-size: 45%;
+  }
+
+  .sidebar {
+    width: 100%;
+    right: -100%;
+  }
+
+  .change .hamburger-menu {
+    right: 38rem;
+  }
+
+  .service {
+    width: 30rem;
+  }
+
+  .footer {
+    height: 18rem;
+  }
 }
